--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,13 +6,16 @@ on:
   pull_request:
     branches: [ main ]
 
+permissions:
+  contents: read
+
 jobs:
   test:
     name: Test
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        go-version: [1.24.x]
+        go-version: ['1.23.x', '1.24.x']  # Include 1.23 as fallback
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
@@ -22,6 +25,7 @@ jobs:
       with:
         go-version: ${{ matrix.go-version }}
         cache: true
+        check-latest: true
 
     - name: Download dependencies
       run: go mod download
@@ -36,7 +40,9 @@ jobs:
       run: go test -race -coverprofile=coverage.out -covermode=atomic -v ./...
 
     - name: Upload coverage to Codecov
+      if: matrix.go-version == '1.24.x'  # Only upload once
       uses: codecov/codecov-action@v4
       with:
         file: ./coverage.out
         fail_ci_if_error: false
+        token: ${{ secrets.CODECOV_TOKEN }}  # Add token for better reliability
