--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -26,8 +26,9 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version: 1.24.x
+          go-version: '1.23.x'  # Use stable version for linting
           cache: false
+          check-latest: true
 
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v8
