fix: resolve golangci-lint version compatibility issue
- Use specific golangci-lint version v1.62.2 instead of 'latest'
- Fixes 'unknown flag: --out-format' error caused by old version v2.2.1
- Ensures consistent linting behavior across CI runs

--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -33,5 +33,5 @@ jobs:
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v8
         with:
-          version: latest
+          version: v1.62.2  # Use specific version instead of latest
           args: --timeout=5m --out-format=github-actions
