fix: use golangci-lint v2.4.0 compatible with action v8
- Fix 'golangci-lint v1 is not supported by golangci-lint-action >= v7' error
- Action v8 requires golangci-lint v2.x or later
- Use v2.4.0 which is a stable modern version

--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -33,5 +33,5 @@ jobs:
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v8
         with:
-          version: v1.62.2  # Use specific version instead of latest
+          version: v2.4.0  # Use v2.x version compatible with action v8
           args: --timeout=5m --out-format=github-actions
