--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -31,7 +31,7 @@ jobs:
           check-latest: true
 
       - name: golangci-lint
-        uses: golangci/golangci-lint-action@v8
+        uses: golangci/golangci-lint-action@v6
         with:
-          version: v2.4.0  # Use v2.x version compatible with action v8
-          args: --timeout=5m --out-format=github-actions
+          version: latest
+          args: --timeout=5m
