fix: update golangci-lint configuration for v1.64.8 compatibility
- Replace deprecated 'check-shadowing' with 'shadow' in govet settings
- Replace deprecated 'min-confidence' with 'confidence' in revive settings
- These changes fix schema validation errors in modern golangci-lint versions
- Configuration now validates successfully with golangci-lint v1.64.8

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -70,11 +70,11 @@ linters-settings:
   goimports:
     local-prefixes: github.com/spandigital/cel2sql
   govet:
-    check-shadowing: true
+    shadow: true  # Use shadow instead of check-shadowing
   misspell:
     locale: US
   revive:
-    min-confidence: 0.3
+    confidence: 0.3  # Use confidence instead of min-confidence
   gosec:
     excludes:
       - G404 # Random number generator not cryptographically secure
