fix: remove shadow config from govet settings
- Remove 'shadow: true' from govet section as it's not supported in golangci-lint v1.64.8
- The schema validation fails with 'additional properties shadow not allowed'
- Default govet checks are sufficient for current needs
- This resolves the config verification error in CI

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -70,7 +70,7 @@ linters-settings:
   goimports:
     local-prefixes: github.com/spandigital/cel2sql
   govet:
-    shadow: true  # Use shadow instead of check-shadowing
+    # Default govet checks are sufficient - shadow check removed due to v1.64.8 compatibility
   misspell:
     locale: US
   revive:
