fix: provide empty object for govet linter settings
- Replace comment-only govet section with empty object {}
- Resolves 'got null, want object' validation error
- Empty object is valid and uses default govet configuration

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -69,8 +69,7 @@ linters-settings:
       - prefix(github.com/spandigital/cel2sql)
   goimports:
     local-prefixes: github.com/spandigital/cel2sql
-  govet:
-    # Default govet checks are sufficient - shadow check removed due to v1.64.8 compatibility
+  govet: {}
   misspell:
     locale: US
   revive:
