fix: resolve remaining lint issues
- Fix perfsprint: replace fmt.Errorf with errors.New and add errors import
- Fix unparam: change unused target parameters to _
- Fix deprecated linter names: gomnd → mnd, goerr113 → err113
- Add missing errors import to cel2sql.go and pg/provider.go
- All tests still pass after changes

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -51,8 +51,8 @@ linters:
     - wsl
     - godot
     - godox
-    - goerr113
-    - gomnd
+    - err113
+    - mnd
     - ireturn
     - nonamedreturns
     - exhaustruct
