--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -69,13 +69,10 @@ jobs:
           cache: true
           check-latest: true
 
-      - name: Install gosec
-        run: |
-          wget -O - -q https://raw.githubusercontent.com/securecodewarrior/gosec/master/install.sh | sh -s v2.21.4
-          sudo mv ./bin/gosec /usr/local/bin/
-
-      - name: Run gosec
-        run: gosec -fmt sarif -out results.sarif ./...
+      - name: Run gosec Security Scanner
+        uses: securecodewarrior/github-action-gosec@master
+        with:
+          args: '-fmt sarif -out results.sarif ./...'
 
       - name: Upload SARIF file
         uses: github/codeql-action/upload-sarif@v3
