--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -69,10 +69,11 @@ jobs:
           cache: true
           check-latest: true
 
+      - name: Install gosec
+        run: go install github.com/securecodewarrior/gosec/v2/cmd/gosec@latest
+
       - name: Run gosec Security Scanner
-        uses: securecodewarrior/github-action-gosec@master
-        with:
-          args: '-fmt sarif -out results.sarif ./...'
+        run: gosec -fmt sarif -out results.sarif ./...
 
       - name: Upload SARIF file
         uses: github/codeql-action/upload-sarif@v3
