Fix golangci-lint configuration for v2.2.1 schema validation
- Changed version from number to string (version: "2")
- Removed linters-settings section that was causing validation issues
- Removed exclude-rules from issues section (not supported in v2.2.1)
- Configuration now validates successfully with golangci-lint config verify
- Fixes CI/CD job 16209036687 (spandigital) golangci-lint workflow failure

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,4 +1,4 @@
-version: 2
+version: "2"
 
 run:
   timeout: 5m
@@ -45,54 +45,3 @@ linters:
     - paralleltest
     - testpackage
     - nlreturn
-
-linters-settings:
-  govet:
-    # Enable all analyzers
-    enable-all: true
-    # Disable specific analyzers
-    disable:
-      - fieldalignment # Too strict for this project
-      
-  gocritic:
-    # Enable multiple checks by tags
-    enabled-tags:
-      - diagnostic
-      - style
-      - performance
-    disabled-checks:
-      - unnamedResult
-      - whyNoLint
-      
-  revive:
-    # Enable default rules
-    rules:
-      - name: exported
-        disabled: false
-        
-  gosec:
-    # Exclude specific rules
-    excludes:
-      - G104 # Audit errors not checked - too many false positives
-      
-  misspell:
-    # Correct spellings using locale preferences for US or UK
-    locale: US
-
-issues:
-  exclude-rules:
-    # Exclude some linters from running on tests files
-    - path: _test\.go
-      linters:
-        - bodyclose
-        - errcheck
-        - gosec
-        - unparam
-    # Exclude examples directory from some checks
-    - path: examples/
-      linters:
-        - gocritic
-        - gosec
-        - unused
-  max-issues-per-linter: 0
-  max-same-issues: 0
